Fix for #338 (#355)
* Fix text-field multi-line scrollbar issue

* added empty line

* fix end-icon at bounds

--- a/packages/mdui/src/components/text-field/style.less
+++ b/packages/mdui/src/components/text-field/style.less
@@ -17,7 +17,10 @@
   align-items: center;
   height: 100%;
   .transition(box-shadow, short4, standard);
-  .padding(0, 16);
+
+  padding: unit((2 / @mdui-root-font-size), rem);
+  
+  .padding-left(16);
 
   &.has-icon {
     .padding-left(12);
@@ -158,7 +161,7 @@
 
 .right-icon:not(.end-icon),
 .has-end-icon .end-icon {
-  .margin-left(16);
+  .margin-right(16);
 }
 
 .prefix,
@@ -288,6 +291,7 @@
   cursor: inherit;
   font-family: inherit;
   .padding(16, 0);
+  .padding-right(16);
   .typescale(body-large);
   .color(on-surface);
   .caret-color(primary);
@@ -320,6 +324,7 @@
 
 :host([variant="filled"]) .label + .input {
   .padding(24, 0, 8, 0);
+  .padding-right(16);
 }
 
 .supporting {
